move source code to src

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(opengl2)
 set(CMAKE_CXX_STANDARD 11)
 
 
-add_executable(opengl2 main.cpp)
+add_executable(opengl2 src/main.cpp)
 
 target_link_libraries(opengl2 SDL2 GL GLEW)
