simple triangle works and shader works too.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(opengl2)
 set(CMAKE_CXX_STANDARD 11)
 
 
-add_executable(opengl2 src/main.cpp src/Display.cpp src/Display.h src/utils/Singleton.h src/utils/AutoLock.h src/Shader.cpp src/Shader.h)
+add_executable(opengl2 src/main.cpp src/Display.cpp src/Display.h src/utils/Singleton.h src/utils/AutoLock.h src/Shader.cpp src/Shader.h src/Mesh.cpp src/Mesh.h)
 
 target_link_libraries(opengl2 SDL2 GL GLEW)
